fix overflow when the heigh of the browser is less than 500px

--- a/src/style/pop-up.css
+++ b/src/style/pop-up.css
@@ -14,14 +14,14 @@
 }
 
 .pop-up .card {
-  width: 80vw;
+  width: 80vmin;
   margin-left: auto;
   margin-right: auto;
   border: 2px solid gray;
   background-color: #fff;
   padding: 3%;
   display: flex;
-  gap: 1.25vw;
+  gap: 1.25vmin;
   flex-direction: column;
   align-items: center;
 }
